Gaz 0.08v Output info update - Добавленна возможность указать дату сборки оборудования - Измененно меню редактированния компонентов, удаленна возможность изменять количество компонентов - Добавленна возможность добавлять компоненты в отдельном окне с указанием даты поставки - Небольшие исправление в системе

--- a/GasEquipt/GasEquipt.csproj
+++ b/GasEquipt/GasEquipt.csproj
@@ -72,6 +72,12 @@
     <Compile Include="ComponentCompony.Designer.cs">
       <DependentUpon>ComponentCompony.cs</DependentUpon>
     </Compile>
+    <Compile Include="ComponentPostavka.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ComponentPostavka.Designer.cs">
+      <DependentUpon>ComponentPostavka.cs</DependentUpon>
+    </Compile>
     <Compile Include="ComponentSearch.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -126,6 +132,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ComponentCompony.resx">
       <DependentUpon>ComponentCompony.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ComponentPostavka.resx">
+      <DependentUpon>ComponentPostavka.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ComponentSearch.resx">
       <DependentUpon>ComponentSearch.cs</DependentUpon>
