--- a/GasEquipt/App.config
+++ b/GasEquipt/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="GasEquipt.Properties.Settings.gazmechConnectionString"
-            connectionString="server=localhost;user id=Gas;password=gasgasgas666;persistsecurityinfo=True;database=gazmech;charset=utf8"
+            connectionString="server=localhost;user id=Gas;password=Admingas1;persistsecurityinfo=True;database=gazmech;charset=utf8"
             providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <startup> 
