--- a/GasEquipt/GasEquipt.csproj
+++ b/GasEquipt/GasEquipt.csproj
@@ -32,9 +32,28 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>login.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.3.0, Culture=neutral, PublicKeyToken=0e99375e54769942" />
+    <Reference Include="DGV Printer">
+      <HintPath>.\DGV Printer.dll</HintPath>
+    </Reference>
+    <Reference Include="DGV2Printer-net45, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\DGV2Printer-net45.dll</HintPath>
+    </Reference>
     <Reference Include="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604" />
+    <Reference Include="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportViewer.Common.10.0.40219.1\lib\Microsoft.ReportViewer.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.DataVisualization, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportViewer.Common.10.0.40219.1\lib\Microsoft.ReportViewer.DataVisualization.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportViewer.Common.10.0.40219.1\lib\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=8.0.18.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Renci.SshNet, Version=2016.1.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106" />
     <Reference Include="System" />
@@ -111,6 +130,9 @@
     <Compile Include="EquiptPostavk.Designer.cs">
       <DependentUpon>EquiptPostavk.cs</DependentUpon>
     </Compile>
+    <Compile Include="gazmechDataSet.cs">
+      <DependentUpon>gazmechDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="gazmechDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -124,6 +146,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ReportComponent.Designer.cs">
+      <DependentUpon>ReportComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReportEquipt.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ReportEquipt.Designer.cs">
+      <DependentUpon>ReportEquipt.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Auntth.resx">
       <DependentUpon>Auntth.cs</DependentUpon>
     </EmbeddedResource>
@@ -164,6 +198,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ReportComponent.resx">
+      <DependentUpon>ReportComponent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportEquipt.resx">
+      <DependentUpon>ReportEquipt.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="gazmechDataSet.xsc">
       <DependentUpon>gazmechDataSet.xsd</DependentUpon>
     </None>
@@ -175,6 +215,7 @@
     <None Include="gazmechDataSet.xss">
       <DependentUpon>gazmechDataSet.xsd</DependentUpon>
     </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -190,6 +231,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\baseline_close_black_18dp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="login.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
